--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -735,13 +735,18 @@ html, body, #worksheet_container {height:100%;}
 }
 
 .progressbar {
+  width: 290px;
+  height: 45px !important;
   border-radius: 0 !important;
+  background: #f5f5f5 !important;
+  margin: 5px;
 }
 
 .progress-label {
   position: absolute;
   color: white;
   font-size: 12px;
+  padding: 3px;
 }
 
 .ui-progressbar .ui-progressbar-value {
