--- a/codalab/apps/web/templates/web/account/signup.html
+++ b/codalab/apps/web/templates/web/account/signup.html
@@ -45,7 +45,7 @@
         <input id="id_password_confirm" class="form-control" name="confirm_password" placeholder="Password again" type="password" required>
     </div>
     <div class="form-group">
-            <label for="id_send_all_notifications">Send me all updates from Codalab:<input id="id_send_all_notifications" class="form-control" name="send_all_notifications" type="checkbox" value="1" checked> </label>
+            <label for="id_send_all_notifications">Send me all updates from Codalab:<input id="id_send_all_notifications" class="form-control" name="send_all_notifications" type="checkbox" value="1"> </label>
             <label for="id_send_some_notifications">Send me only important updates from Codalab:<input id="id_send_some_notifications" class="form-control" name="send_some_notifications" type="checkbox" value="1" checked> </label>
     </div>
     <input type="hidden" name="success_uri" value="{% url 'account_signup_success' %}" />
